Portfolio cards issue fixed
Fixed the issue of portfolio cards getting clipped on mobile devices

--- a/public/stylesheets/resume.css
+++ b/public/stylesheets/resume.css
@@ -86,11 +86,12 @@ article {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 1rem;
+  margin: 1rem auto;
   padding: 1rem;
   border-radius: 5px;
   border: none;
   box-shadow: 1px 1px 1px #e83e8c;
+  max-width: 80vw;
 }
 
 .gallery {
